# imt3912_dev

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  compile.sh  json_test.json  proprog.md  valgrind_run.sh
assets/: jsonFile.json  rawFile.txt
assets/graphics/: graphics.json  testTextureAtlas.json
cmd/: CMakeLists.txt
cmd/src/cmd/: constants.h  parser.cpp
ecs/: CMakeLists.txt
ecs/src/nox/ecs/: Component.h  Component.ipp  ComponentCollection.cpp  ComponentCollection.h  ComponentType.cpp  ComponentType.h  DataAccess.h  Entity.cpp  Entity.h  EntityId.h  EntityManager.cpp  EntityManager.h  Event.cpp  Event.h  Event.tpp  EventArgument.cpp  EventArgument.h  EventSystem.cpp  EventSystem.h  EventType.cpp  EventType.h  Factory.cpp  Factory.h  IComponent.h  MetaInformation.cpp  MetaInformation.h  OperationTypes.h  SmartHandle.h  SmartHandle.tpp  TypeIdentifier.h  TypeIdentifier.ipp  UniquePtrComponentCollection.cpp  UniquePtrComponentCollection.h  VirtualComponentCollection.cpp  VirtualComponentCollection.h  createEventArgument.h  createEventArgument.tpp  createMetaInformation.h  createMetaInformation.tpp  types.h
ecs/src/nox/ecs/component/: Children.cpp  Children.h  Parent.cpp  Parent.h  Sprite.cpp  Sprite.h  Sprite.ipp  Transform.cpp  Transform.h  Transform.ipp  Types.h
ecs/src/nox/memory/: Byte.h  FixedSlotPool.h  FixedSlotPool.tpp  HeapAllocator.cpp  HeapAllocator.h  LinearAllocator.h  LinearAllocator.tpp  LockFreeAllocator.h  LockFreeAllocator.tpp  LockedAllocator.h  LockedAllocator.tpp
ecs/src/nox/thread/: Atomic.h  LockFreeStack.h  LockFreeStack.tpp  LockedQueue.h  LockedQueue.tpp  Pool.h  Pool.tpp
ecs/src/nox/util/: cycle_count.h  nox_assert.h  pms_debug.cpp  pms_debug.h
ecs/src/tests/: main.cpp
ecs/src/tests/console_template/: console_application.cpp  console_application.h  main.cpp
ecs/src/tests/fast_spawning/: console_application.cpp  main.cpp
ecs/src/tests/fast_spawning_sprite/: console_application.h  main.cpp
ecs/src/tests/fast_spawning_transform/: console_application.cpp
ecs/src/tests/memory_usage/: console_application.cpp  console_application.h  main.cpp
ecs/src/tests/memory_usage_sprite/: console_application.cpp
ecs/src/tests/memory_usage_transform/: console_application.cpp  main.cpp
ecs/src/tests/memory_usage_transform/assets/world/: exampleWorld.json
ecs/src/tests/numerous_unique_components/: console_application.cpp  console_application.h  globals.cpp  globals.h  main.cpp  recursive_register_component.h  recursive_register_component.tpp  send_dummy_event.h  send_dummy_event.tpp
ecs/src/tests/numerous_unique_components/components/: trivial_component.h  trivial_component.tpp
ecs/src/tests/window_template/: main.cpp  window_application.cpp  window_application.h  window_view.cpp  window_view.h
ecs/src/trondtest/: main.cpp  window_application.cpp  window_application.h  window_view.cpp
examples/google_test/: CMakeLists.txt  sample1_unittest.cpp  sample2_unittest.cpp  sample3_unittest.cpp
results/10_runs/hardware_info/2017-05-14_00-33-37:/: battery_info.txt  cpu_info.txt
results/75_cmps/hardware_info/2017-05-13_20-48-48:/: battery_info.txt
results/75_cmps_final/hardware_info/2017-05-13_22-28-58:/: battery_info.txt  cmakecache_copy.txt  cpu_info.txt
results/ecs/hardware_info/2017-04-29_11-55-59:/: battery_info.txt  cmakecache_copy.txt  cpu_info.txt
results/ecs/hardware_info/2017-04-30_14-50-53:/: battery_info.txt  cpu_info.txt  hardware_info_long.txt
results/ecs/hardware_info/2017-05-01_00-28-40:/: battery_info.txt  cpu_info.txt  hardware_info_long.txt
tests/: CMakeLists.txt  run_tests.sh
tests/cmd/: CMakeLists.txt
tests/compilation_time/: run_compilation.sh
tests/console_template/: CMakeLists.txt
tests/console_template/src/: console_application.cpp  console_application.h  main.cpp
tests/console_template/src/cmd/: constants.h  parser.cpp  parser.h
tests/ecs/: CMakeLists.txt
tests/ecs/console_template/: CMakeLists.txt
tests/ecs/console_template/src/: console_application.cpp  console_application.h  main.cpp
tests/fast_spawning/src/: console_application.cpp  console_application.h
tests/memory_usage-empty_actors/src/: console_application.cpp  console_application.h
tests/memory_usage-physics_actors/src/: console_application.cpp
tests/memory_usage-sprite_actors/src/: console_application.cpp
tests/memory_usage/empty_actors/: CMakeLists.txt
tests/multi_threading_support/: CMakeLists.txt
tests/multi_threading_support/src/: console_application.cpp  main.cpp
tests/nox/: CMakeLists.txt
tests/nox/compilation_time/: run_compilation.sh
tests/nox/fast_spawning/: CMakeLists.txt
tests/nox/multi_threading_support/: CMakeLists.txt
tests/nox/multi_threading_support/src/: console_application.cpp  globals.h  recursive_register_component.h
tests/nox/multi_threading_support/src/events/: dummy_event.cpp
tests/nox/numerous_unique_components/: CMakeLists.txt
tests/nox/scripts/: create_csv.sh  run_all_tests.sh  run_both_tests.sh  run_ecs_tests.sh  run_nox_tests.sh  run_test.sh
tests/nox/thread_safe_logger/: run_test.sh
tests/nox/window_template/: CMakeLists.txt
tests/numerous_unique_components/: CMakeLists.txt
tests/numerous_unique_components/assets/actor/: MovingActor.json  physics_actor.json  spawning_actor.json
tests/numerous_unique_components/scripts/: generate_component_names.sh
tests/numerous_unique_components/src/: console_application.cpp  console_application.h  recursive_register_component.h  recursive_register_component.tpp  send_dummy_event.h  send_dummy_event.tpp
tests/numerous_unique_components/src/components/: trivial_component.h  trivial_component.tpp
tests/scripts/: create_world_with_n_actors.sh  generate_worlds.sh  run_all_tests.sh  run_test.sh  run_tests.sh
tests/test/: CMakeLists.txt
tests/test/src/: main.cpp
tests/thread_safe_logger/: run_test.sh
tests/thread_safe_logger/src/: main.cpp
tests/window_template/src/: main.cpp  window_application.cpp  window_application.h  window_view.cpp  window_view.h
tools/git_hooks/: commit-msg  install_hooks.sh
(+13367 files in other folders)
